Fixing chicken and eggs problem group purchase and order creation